--- a/ecommerce/static/src/components/Header/menus.scss
+++ b/ecommerce/static/src/components/Header/menus.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 50px;
-    background: #ffc107;
+    background: #76eb8b;
     border-radius: 30px 30px 0 0;
 
     ul {
